Bug 261716 - Typo in the tooltip of the Search button in the Search Window
Summary: Typo in the tooltip of the Search button in the Search Window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-31 14:23 UTC by George Metaxas
Modified: 2011-01-03 22:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Metaxas 2010-12-31 14:23:02 UTC
Version:           2.0.89 (using Devel) 
OS:                Linux

There is a small typo in the Search button of the Search Window (Find Messages). The tooltip of the Search button (not currently visible, although it should be) is: Search for messags. This should be changed to: Search for messages. The typo can be found in: kmail/searchwindow.cpp:94.

Reproducible: Always
Comment 1 Thomas McGuire 2011-01-01 20:46:29 UTC
Please commit a patch as soon as the string freeze is over, i.e. when KDEPIM 4.6 will be branched off the master branch. This will probably be announced on the kdepim mailinglist.
Comment 2 George Metaxas 2011-01-03 22:44:36 UTC
commit f58797968836d07cc031307a758728775490c0ba
branch master
Author: George Metaxas <gmetal31@gmail.com>
Date:   Mon Jan 3 23:39:38 2011 +0200

    Fixed a minor typo in the search button's tooltip, in the application's search window.
    
    BUG: 261716

diff --git a/kmail/searchwindow.cpp b/kmail/searchwindow.cpp
index fa1f3b0..d53f5fd 100644
--- a/kmail/searchwindow.cpp
+++ b/kmail/searchwindow.cpp
@@ -91,7 +91,7 @@ SearchWindow::SearchWindow( KMMainWidget *widget, const Akonadi::Collection &col
   setCaption( i18n( "Find Messages" ) );
   setButtons( User1 | User2 | Close );
   setDefaultButton( User1 );
-  setButtonGuiItem( User1, KGuiItem( i18nc( "@action:button Search for messags", "&Search" ), "edit-find" ) );
+  setButtonGuiItem( User1, KGuiItem( i18nc( "@action:button Search for messages", "&Search" ), "edit-find" ) );
   setButtonGuiItem( User2, KStandardGuiItem::stop() );
 
   KWindowSystem::setIcons( winId(), qApp->windowIcon().pixmap( IconSize( KIconLoader::Desktop ),