Fixed a minor typo in the search button's tooltip, in the application's search window.

BUG: 261716